# spyrit

./: .gitignore  .hgignore  AUTHORS  AboutDialog.py  ActionSet.py  AnsiFilter.py  Application.py  Autocompleter.py  BaseFilter.py  CallbackRegistry.py  ChunkData.py  CommandRegistry.py  Commands.py  Config.py  ConfigBasket.py  ConfigObserver.py  ConfigPaths.py  ConfigTypes.py  Core.py  DefaultSoundBackend.py  Defaults.py  FlowControlFilter.py  FormatData.py  FormatManager.py  FormatStack.py  Globals.py  INSTALL  IniConfigBasket.py  InputHistory.py  Logger.py  MacosSpecific.py  MainWindow.py  Matches.py  Messages.py  NewWorldDialog.py  OrderedDict.py  OutputManager.py  Pipeline.py  PipelineChunks.py  PipelineFilters.py  (+39 more)
branches/experiments/: PrettyOptionPanel.py
branches/overlay_refactor/: AboutDialog.py  ActionSet.py  Config.py  ConfigObserver.py  MainWindow.py  Pipeline.py  PipelineFilters.py  PosixSpecific.py  ScrollableTabWidget.py  Singletons.py  SocketPipeline.py  Utilities.py  World.py  WorldBaseOutputUI.py  WorldOutputOverlay.py  WorldOutputUI.py  WorldUI.py
branches/pipeline-refactor/: AnsiFilter.py  Application.py  BaseFilter.py  Config.py  ConfigBasket.py  ConfigObserver.py  ConfigPaths.py  EndLineFilter.py  InputHistory.py  Messages.py  Pipeline.py  PipelineChunks.py  PosixSpecific.py  Singletons.py  SocketPipeline.py  TelnetFilter.py  Types.py  UnicodeTextFilter.py  Utilities.py  World.py  WorldInputUI.py  WorldOutputUI.py
commands/: BaseCommand.py  CommandExecutor.py  CommandParsing.py  ConfCommand.py  DebugCommand.py  FindCommand.py  HelpCommand.py  MatchCommand.py  OutputCommand.py  SessionCommand.py  SoundCommand.py
resources/: mkresources.py  mkresources.sh  resources.qrc  spyrcc.py  spyrit-logo.xcf
spyrit/: __init__.py  bootstrap.py  constants.py  default_paths_base.py  dependency_checker.py  exception_handler.py  gc_stats.py  main.py  platform.py  platform_darwin.py  platform_linux.py  platform_win32.py  regex_helpers.py  safe_signal.py  signal_handlers.py  signals.py  singletonizer.py
spyrit/network/: autologin.py  connection.py  fragments.py  (+3 more)
src/: AboutDialog.py  ActionSet.py  Application.py  Autocompleter.py  CallbackRegistry.py  CheckVersions.py  CommandRegistry.py  Config.py  ConfigBasket.py  ConfigObserver.py  ConfigPaths.py  ConfigTypes.py  ConfirmDialog.py  Defaults.py  FormatStack.py  Globals.py  IniConfigBasket.py  IniParser.py  InputHistory.py  Logger.py  MacosSpecific.py  MainWindow.py  Matches.py  Messages.py  NewWorldDialog.py  OrderedDict.py  OutputManager.py  PlatformSpecific.py  PosixSpecific.py  PrettyOptionDialog.py  PrettyOptionPanel.py  PrettyPanelHeader.py  PygameBackend.py  QSoundBackend.py  QTextEditWithClickableLinks.py  QTextFormatFormatter.py  QuickConnectDialog.py  SearchManager.py  Separator.py  Serializers.py  (+34 more)
testing/: demo_bars.py  demo_dialog_pane.py  demo_logo.py  demo_scramble.py  demo_settings.py  demo_sliding_pane_container.py  demo_welcome_pane.py  demo_world_pane.py  test_autocompleter.py  test_autologin.py  test_colors.py  test_connection.py  test_default_paths.py  test_format.py  test_historian.py  test_keepalive.py  test_pattern.py  test_processors.py  test_resources.py  test_scrambled_text.py  test_scribe.py  test_serializers.py  test_settings.py  test_singletonizer.py  test_state.py
tests/: ConfigBasket.rst  nosetests.sh  run_tests.py  runtests.py  spyrit_tests.py  testrunner
trunk/: AboutDialog.py  ActionSet.py  AnsiFilter.py  Application.py  Autocompleter.py  BaseFilter.py  CallbackRegistry.py  Commands.py  Config.py  ConfigBasket.py  ConfigObserver.py  ConfigPaths.py  ConfigTypes.py  Core.py  CreateWorldDialog.py  Defaults.py  EndLineFilter.py  FlowControlFilter.py  IniConfigBasket.py  InputHistory.py  Logger.py  MainWindow.py  Messages.py  NewWorldDialog.py  Pipeline.py  PipelineChunks.py  PipelineFilters.py  PrettyOptionDialog.py  PrettyOptionPanel.py  PrettyPanelHeader.py  QuickConnectDialog.py  ScrollableTabWidget.py  SearchManager.py  Singletons.py  SmartMatch.py  SmartTabWidget.py  SocketPipeline.py  TODO  TabDelegate.py  TelnetFilter.py  (+13 more)
(+174 files in other folders)
