[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Spyrit"
authors = [{name = "P. Varet", email = "p.varet@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"

dependencies = [
    "PySide6",
    "SunsetSettings",
]

[project.optional-dependencies]
test = [
    "bandit[toml]",
    "pytest",
    "pytest-mock",
]

[project.gui-scripts]
spyrit = "spyrit.main:run"

[tool.flit.module]
name = "spyrit"

[tool.mypy]
show_error_codes = true

[tool.bandit]
skips = [
    "B101",  # Disable alerting on 'assert' usage.
]
