[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Spyrit"
authors = [{name = "P. Varet", email = "p.varet@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"

dependencies = [
    "PySide6>=6.5.0",
    "regex",
    "SunsetSettings>=0.5.1",
]

[project.optional-dependencies]
test = [
    "bandit[toml]",
    "pytest",
    "pytest-mock",
]
dev = [
    "types-regex",
]

[project.gui-scripts]
spyrit = "spyrit.main:run"

[tool.flit.module]
name = "spyrit"

[tool.pylint.main]
# Allow pylint to load PySide6 to check the existence of module members.
extension-pkg-allow-list = ["PySide6"]

[tool.pylint.basic]
# Inform pylint of our actual method naming convention.
method-naming-style = "camelCase"

[tool.mypy]
show_error_codes = true

[tool.bandit]
skips = [
    "B101",  # Disable alerting on 'assert' usage.
]
