[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Spyrit"
authors = [{ name = "P. Varet", email = "p.varet@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]
dynamic = ["version", "description"]
requires-python = ">=3.11"

dependencies = ["PySide6>=6.5.0", "regex", "SunsetSettings>=0.5.1"]

[project.optional-dependencies]
test = ["hypothesis", "pytest", "pytest-mock"]
dev = ["bandit[toml]", "types-regex"]

[project.gui-scripts]
spyrit = "spyrit.main:run"

[tool.bandit]
skips = [
    "B101", # Disable alerting on 'assert' usage.
    "B311", # Disable alerting on non-cryptographic 'random' usage.
]

[tool.flit.module]
name = "spyrit"

[tool.isort]
# Use isort in black-compatible mode.
profile = "black"

[tool.mypy]
show_error_codes = true

[tool.pylint.main]
# Allow pylint to load PySide6 to check the existence of module members.
extension-pkg-allow-list = ["PySide6"]

[tool.pylint.BASIC]
# Inform pylint of our actual method naming convention.
method-naming-style = "camelCase"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name", # N815
]
